[gd_scene load_steps=3 format=3 uid="uid://dc0gs0ajmfki1"]

[ext_resource type="Script" path="res://Cutscene Nodes/DialogueActionNode.gd" id="1_mb0ed"]
[ext_resource type="PackedScene" path="res://Cutscene Nodes/position_control.tscn" id="2_qncmk"]

[node name="Dialogue Action Node" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 360.0
offset_bottom = 320.0
script = ExtResource("1_mb0ed")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 30.0
offset_right = 112.0
offset_bottom = 26.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 18
text = "Dialogue:"

[node name="First LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 30.0
offset_right = 220.0
offset_bottom = 61.0
focus_mode = 0
placeholder_text = "First Line"

[node name="Second LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 70.0
offset_right = 220.0
offset_bottom = 101.0
focus_mode = 0
placeholder_text = "Second Line"

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 4
layout_mode = 0
offset_left = 240.0
offset_top = 30.0
offset_right = 350.0
offset_bottom = 140.0
expand_mode = 1
stretch_mode = 3

[node name="Face OptionButton" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 110.0
offset_right = 220.0
offset_bottom = 140.0
focus_mode = 0
text_overrun_behavior = 3
item_count = 137
fit_to_longest_item = false
popup/item_0/text = "sprFaceDirector"
popup/item_0/id = 283
popup/item_1/text = "sprMasksBig"
popup/item_1/id = 391
popup/item_2/text = "sprMaskTiger"
popup/item_2/id = 449
popup/item_3/text = "sprMaskZebra"
popup/item_3/id = 450
popup/item_4/text = "sprMaskBear"
popup/item_4/id = 451
popup/item_5/text = "sprMaskSwan1"
popup/item_5/id = 452
popup/item_6/text = "sprHenchmanFace1"
popup/item_6/id = 463
popup/item_7/text = "sprHenchmanFace2"
popup/item_7/id = 464
popup/item_8/text = "sprFaceHost"
popup/item_8/id = 499
popup/item_9/text = "sprFacePig"
popup/item_9/id = 500
popup/item_10/text = "sprFaceHostAnxious"
popup/item_10/id = 501
popup/item_11/text = "sprFacePigAngry"
popup/item_11/id = 524
popup/item_12/text = "sprFaceRichard"
popup/item_12/id = 525
popup/item_13/text = "sprFaceHostTwitch"
popup/item_13/id = 527
popup/item_14/text = "sprFacePigButcher"
popup/item_14/id = 532
popup/item_15/text = "sprFaceGeneral"
popup/item_15/id = 1204
popup/item_16/text = "sprFaceCop"
popup/item_16/id = 1271
popup/item_17/text = "sprFaceBlackSquad"
popup/item_17/id = 1272
popup/item_18/text = "sprFaceFatSquad"
popup/item_18/id = 1273
popup/item_19/text = "sprFaceWalkieTalkie"
popup/item_19/id = 1276
popup/item_20/text = "sprFaceNicke"
popup/item_20/id = 1278
popup/item_21/text = "sprFacePolice"
popup/item_21/id = 1338
popup/item_22/text = "sprFacePizzaDude"
popup/item_22/id = 1380
popup/item_23/text = "sprFaceWaitress"
popup/item_23/id = 1381
popup/item_24/text = "sprFaceForms"
popup/item_24/id = 1428
popup/item_25/text = "sprFaceCobraPhone"
popup/item_25/id = 1429
popup/item_26/text = "sprFaceCobra"
popup/item_26/id = 1431
popup/item_27/text = "sprFaceTattooer"
popup/item_27/id = 1539
popup/item_28/text = "sprFacePigPsycho"
popup/item_28/id = 1605
popup/item_29/text = "sprFacePoliceInterrogation"
popup/item_29/id = 1606
popup/item_30/text = "sprFacePigSilent"
popup/item_30/id = 1612
popup/item_31/text = "sprFaceGirlAngry"
popup/item_31/id = 1641
popup/item_32/text = "sprFaceWriterWife"
popup/item_32/id = 1653
popup/item_33/text = "sprFaceHobo"
popup/item_33/id = 1670
popup/item_34/text = "sprFaceWriter"
popup/item_34/id = 1671
popup/item_35/text = "sprFacePigPhone"
popup/item_35/id = 1686
popup/item_36/text = "sprFaceGirl"
popup/item_36/id = 1688
popup/item_37/text = "sprFaceScript"
popup/item_37/id = 1696
popup/item_38/text = "sprFacePigMask"
popup/item_38/id = 1697
popup/item_39/text = "sprFacePoliceScared"
popup/item_39/id = 1698
popup/item_40/text = "sprFaceJudge"
popup/item_40/id = 1721
popup/item_41/text = "sprFaceProsecutor"
popup/item_41/id = 1722
popup/item_42/text = "sprFaceInspector"
popup/item_42/id = 1723
popup/item_43/text = "sprFaceLawyer"
popup/item_43/id = 1724
popup/item_44/text = "sprFacePhone"
popup/item_44/id = 1729
popup/item_45/text = "sprFaceRadio"
popup/item_45/id = 1762
popup/item_46/text = "sprFaceHenchman"
popup/item_46/id = 1763
popup/item_47/text = "sprFaceCellPhone"
popup/item_47/id = 1840
popup/item_48/text = "sprMaskSwan2"
popup/item_48/id = 1881
popup/item_49/text = "sprFaceSister"
popup/item_49/id = 1891
popup/item_50/text = "sprFaceSoldier"
popup/item_50/id = 1915
popup/item_51/text = "sprFaceHenchmanGirlfriend"
popup/item_51/id = 1916
popup/item_52/text = "sprFaceAndy"
popup/item_52/id = 1932
popup/item_53/text = "sprFaceNote"
popup/item_53/id = 1948
popup/item_54/text = "sprFaceSon"
popup/item_54/id = 2082
popup/item_55/text = "sprFaceSonAngry"
popup/item_55/id = 2083
popup/item_56/text = "sprFaceSaunaGangster"
popup/item_56/id = 2135
popup/item_57/text = "sprFaceVIPGuard"
popup/item_57/id = 2142
popup/item_58/text = "sprFace50Manager"
popup/item_58/id = 2610
popup/item_59/text = "sprFaceSwan"
popup/item_59/id = 2756
popup/item_60/text = "sprFaceGeneralDown"
popup/item_60/id = 2765
popup/item_61/text = "sprite2772"
popup/item_61/id = 2772
popup/item_62/text = "sprFace50ManagerGlad"
popup/item_62/id = 2803
popup/item_63/text = "sprFaceCobraHappy"
popup/item_63/id = 2804
popup/item_64/text = "sprFaceFather"
popup/item_64/id = 2808
popup/item_65/text = "sprFaceBiker"
popup/item_65/id = 2824
popup/item_66/text = "sprFaceGeneralPanther"
popup/item_66/id = 3028
popup/item_67/text = "sprFaceGeneralBlood"
popup/item_67/id = 3029
popup/item_68/text = "sprFaceNickeStore"
popup/item_68/id = 3096
popup/item_69/text = "sprFaceSonGate"
popup/item_69/id = 3196
popup/item_70/text = "sprFaceSonGateCover"
popup/item_70/id = 3197
popup/item_71/text = "sprFaceRussianParty"
popup/item_71/id = 3244
popup/item_72/text = "sprFaceGangLeader"
popup/item_72/id = 3283
popup/item_73/text = "sprFaceColombianBoss"
popup/item_73/id = 3325
popup/item_74/text = "sprFaceGolfCart"
popup/item_74/id = 3352
popup/item_75/text = "sprFaceVentriloquist"
popup/item_75/id = 3353
popup/item_76/text = "sprFacePoliceChief"
popup/item_76/id = 3357
popup/item_77/text = "sprFaceCSI"
popup/item_77/id = 3373
popup/item_78/text = "sprFaceCopPanic"
popup/item_78/id = 3385
popup/item_79/text = "sprFaceCopPhone"
popup/item_79/id = 3393
popup/item_80/text = "sprFaceSwatBoss"
popup/item_80/id = 3399
popup/item_81/text = "sprFaceSwat"
popup/item_81/id = 3403
popup/item_82/text = "sprFaceSonRobber"
popup/item_82/id = 3407
popup/item_83/text = "sprFaceWriterNote"
popup/item_83/id = 3439
popup/item_84/text = "sprFaceWifeLetter"
popup/item_84/id = 3448
popup/item_85/text = "sprFaceRatMom"
popup/item_85/id = 3474
popup/item_86/text = "sprFaceRat"
popup/item_86/id = 3475
popup/item_87/text = "sprFaceTV"
popup/item_87/id = 3520
popup/item_88/text = "sprFaceRatShades"
popup/item_88/id = 3539
popup/item_89/text = "sprMaskCobra"
popup/item_89/id = 3558
popup/item_90/text = "sprMaskRat"
popup/item_90/id = 3559
popup/item_91/text = "sprFaceRussianCobra"
popup/item_91/id = 3566
popup/item_92/text = "sprFaceDennis"
popup/item_92/id = 3648
popup/item_93/text = "sprFaceJonatan"
popup/item_93/id = 3649
popup/item_94/text = "sprFaceGuard"
popup/item_94/id = 3666
popup/item_95/text = "sprFacePrisonBoss"
popup/item_95/id = 3667
popup/item_96/text = "sprFaceRobber"
popup/item_96/id = 3750
popup/item_97/text = "sprFaceRatPhone"
popup/item_97/id = 3760
popup/item_98/text = "sprFaceFloppyNote"
popup/item_98/id = 3847
popup/item_99/text = "sprFaceCopyClerk"
popup/item_99/id = 3848
popup/item_100/text = "sprFaceNewsPaper"
popup/item_100/id = 3863
popup/item_101/text = "sprFaceRadioBig"
popup/item_101/id = 3865
popup/item_102/text = "sprFaceNewsPaperOld"
popup/item_102/id = 3867
popup/item_103/text = "sprMaskChicken"
popup/item_103/id = 3887
popup/item_104/text = "sprMaskGiraffe"
popup/item_104/id = 3888
popup/item_105/text = "sprMaskHorse"
popup/item_105/id = 3889
popup/item_106/text = "sprFaceRatCassettes"
popup/item_106/id = 4049
popup/item_107/text = "sprFaceAsh"
popup/item_107/id = 4250
popup/item_108/text = "sprFaceCorey"
popup/item_108/id = 4251
popup/item_109/text = "sprFaceHammer"
popup/item_109/id = 4252
popup/item_110/text = "sprFaceMark"
popup/item_110/id = 4253
popup/item_111/text = "sprFaceNPC1"
popup/item_111/id = 4254
popup/item_112/text = "sprFaceTony"
popup/item_112/id = 4255
popup/item_113/text = "sprCobraBlood"
popup/item_113/id = 4256
popup/item_114/text = "sprBikerFace"
popup/item_114/id = 4277
popup/item_115/text = "sprMaskOwl"
popup/item_115/id = 4300
popup/item_116/text = "sprMaskPig"
popup/item_116/id = 4301
popup/item_117/text = "sprMaskTigerOriginal"
popup/item_117/id = 4302
popup/item_118/text = "sprMaskRabbit"
popup/item_118/id = 4304
popup/item_119/text = "sprMaskWolf"
popup/item_119/id = 4305
popup/item_120/text = "sprMaskDog"
popup/item_120/id = 4306
popup/item_121/text = "sprMaskFrog"
popup/item_121/id = 4307
popup/item_122/text = "sprMaskFish"
popup/item_122/id = 4308
popup/item_123/text = "sprMaskMole"
popup/item_123/id = 4309
popup/item_124/text = "sprMaskApe"
popup/item_124/id = 4310
popup/item_125/text = "sprMaskGrassHopper"
popup/item_125/id = 4311
popup/item_126/text = "sprMaskElephant"
popup/item_126/id = 4312
popup/item_127/text = "sprMaskCamel"
popup/item_127/id = 4313
popup/item_128/text = "sprMaskFox"
popup/item_128/id = 4314
popup/item_129/text = "sprMaskChameleon"
popup/item_129/id = 4315
popup/item_130/text = "sprMaskPanther"
popup/item_130/id = 4316
popup/item_131/text = "sprMaskWalrus"
popup/item_131/id = 4317
popup/item_132/text = "sprMaskOctopus"
popup/item_132/id = 4318
popup/item_133/text = "sprMaskCrocodile"
popup/item_133/id = 4319
popup/item_134/text = "sprMaskUnicorn"
popup/item_134/id = 4320
popup/item_135/text = "sprMaskBat"
popup/item_135/id = 4321
popup/item_136/text = "sprFaceBikerHelmet"
popup/item_136/id = 4324

[node name="Face SpinBox" type="SpinBox" parent="."]
layout_mode = 0
offset_left = 230.0
offset_top = 150.0
offset_right = 340.0
offset_bottom = 181.0
max_value = 0.0
allow_greater = true

[node name="Messages ItemList" type="ItemList" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 190.0
offset_right = 340.0
offset_bottom = 300.0
focus_mode = 0

[node name="Focus OptionButton" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 150.0
offset_right = 220.0
offset_bottom = 180.0
focus_mode = 0

[node name="Timer" type="Timer" parent="."]

[node name="Position Control" parent="." instance=ExtResource("2_qncmk")]
layout_mode = 1

[connection signal="item_selected" from="Face OptionButton" to="." method="_on_face_option_button_item_selected"]
[connection signal="value_changed" from="Face SpinBox" to="." method="_on_face_spin_box_value_changed"]
[connection signal="item_selected" from="Messages ItemList" to="." method="_on_messages_item_list_item_selected"]
[connection signal="timeout" from="Timer" to="." method="refresh_frame"]
